...

    debugPrint('[i] Current screen location: $location');

    if (location == AppRoutes.home) {
      ref.read(fabProvider.notifier).setActions([
        FabAction(
          label: 'Create trip',
          onTap: () => context.go(AppRoutes.createTrip),
        ),
        FabAction(
          label: 'Join a trip',
          onTap: () => context.go(AppRoutes.joinTrip),
        ),
...
